<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/newBeeCard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NewBeeBadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/newBeeBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/NewBeeBadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/newBeeBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/BeginnerCard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newBeeCard">

        <TextView
            android:id="@+id/BeginnerBadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/beginnerBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/BeginnerBadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/beginnerBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Smartcard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BeginnerCard">

        <TextView
            android:id="@+id/BadgeSmart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/smartBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Smartbadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/smartBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Curiouscard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Smartcard">

        <TextView
            android:id="@+id/Badgecurious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/curiousBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/curioubadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/curiousBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Scholarcard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Curiouscard">

        <TextView
            android:id="@+id/BadgeScholar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/scholarBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Scholarbadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/scholarBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/Juniorcard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Scholarcard">

        <TextView
            android:id="@+id/Badgejunior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/juniorBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Juniorbadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/juniorBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/talentedCard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Juniorcard">

        <TextView
            android:id="@+id/Badgetalented"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/talentedBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/Talentedbadgedetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/talentedBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/geniousCard"
        android:layout_width="370dp"
        android:layout_height="139dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Juniorcard">

        <TextView
            android:id="@+id/BadgeGenious"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/gebiousBadge"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/geniousBadgeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"

            android:text="@string/geniousBadgeDetails"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>