<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="#005662">


    <ImageView
        android:id="@+id/starBadgeImageView"
        android:layout_width="189dp"
        android:layout_height="96dp"
        android:layout_marginTop="64dp"
        android:background="#005662"
        android:contentDescription="@string/starimage"
        app:layout_constraintEnd_toEndOf="@+id/titleGrid"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_star_24_null"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/userScore"

        android:layout_width="211dp"
        android:layout_height="97dp"
        android:layout_marginStart="185dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#00ACC1"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/getStarEarnBadgeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toEndOf="@+id/starBadgeImageView"
        app:layout_constraintStart_toStartOf="@+id/starBadgeImageView"
        app:layout_constraintTop_toTopOf="@+id/titleGrid"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/getStarEarnBadgeBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="409dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="104dp"
        android:background="@drawable/circle_shape"
        android:gravity="center"
        android:text="@string/get_stars"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/starBadgeImageView" />

    <TextView
        android:id="@+id/titleGrid"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="20dp"
        android:background="@drawable/rect_shape"
        android:text="@string/collect_stars"
        android:textAlignment="viewStart"
        android:textColor="@color/green_dark"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/starBadgeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>