<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:textAlignment="center"
    android:visibility="visible"
    tools:context=".LogInActivity">

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="199dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_wave_9_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="472dp"
        android:layout_height="135dp"
        android:background="@drawable/ic_wave_7_"
        android:foregroundTint="#005662"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="John Robert"
        android:background="@drawable/rect_shape"
        android:backgroundTint="#005662"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="281dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="clickdevs@gmail.com"
        android:background="@drawable/rect_shape"
        android:backgroundTint="#005662"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.595"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="91dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle_shape"
        android:elevation="@dimen/cardview_compat_inset_shadow"
        android:ems="5"
        android:text="@string/login"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="88dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="#005662"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />
</androidx.constraintlayout.widget.ConstraintLayout>