<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lessons">

    <TextView
        android:id="@+id/topics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/topics_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.011" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Topic_horizontal_recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="456dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topics"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rect_shape"
        android:backgroundTint="#005662"
        android:textAlignment="gravity"
        android:textDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/goback_Image_Lesson_Layout"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="@color/green_dark"
        android:contentDescription="@string/backarrowimg"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        app:layout_constraintStart_toStartOf="@id/view3"
        app:layout_constraintTop_toTopOf="@id/view3"
        app:layout_constraintVertical_bias="0.421"
        tools:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/lessonPageTitle"
        android:layout_width="212dp"
        android:layout_height="44dp"
        android:layout_marginEnd="76dp"
        android:text="@string/lessons"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/goback_Image_Lesson_Layout"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.727" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lesson_vertical_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Topic_horizontal_recyclerView"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>